--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="utf-8">
 	<title></title>
 
 
-
-
-
-
 </head>
 <body>
+<button class="button">
+	
+<img class="coockie" src="https://us.123rf.com/450wm/lindwa/lindwa1209/lindwa120900010/15253493-biscuits-au-chocolat.jpg?ver=6"/></button>
+
+<input type="text" class="see"></input>
+
+
+
 
 
 
